--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
 }
 
 .page {
-    max-width: 33rem;
+    max-width: clamp(33rem, 30rem  60vw, 117rem);
+    padding: 0 5rem;
     margin: 0 auto;
 }
 
@@ -150,14 +151,9 @@ main {
     }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 760px) {
     :root {
         --fs-heading: 5.6rem;
-    }
-
-    .page {
-        max-width: 117rem;
-        padding: 0 5rem;
     }
 
     main {
@@ -165,7 +161,8 @@ main {
     }
 }
 
-@media (min-width: 930px) {
+@media (min-width: 1440px) {
+
     main {
         grid-template-areas: "A B B"
         "C C D";
@@ -188,4 +185,4 @@ main {
     }
 }
 
-/* #F081 */
+/* #F084 */
